# Tools

./: .gitignore  ADVulture_README.md  LICENSE  README.md  forgepoint_capital_entra_analysis_2026-05-14.md  pyproject.toml  requirements.txt  test_forai_fixes.py
CRA/EVMS/: .env.example  .eslintrc.js  .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.agents  Dockerfile.dashboard  Dockerfile.graphrl  Dockerfile.orchestrator  ENSEMBLE_MIGRATION_SUMMARY.md  GETTING_STARTED.md  GRAPHRL_DESIGN.md  LICENSE  OPEN_SOURCE_LICENSES.md  PROJECT_STRUCTURE.md  README.md  SCANNING_FIX.md  SECURITY.md  SIMPLIFICATION.md  TARGET_DISCOVERY.md  TECHNOLOGY_STACK.md  docker-compose.yml  enhanced_dashboard.html  evms.py  evms_config.json  jest.config.js  package.json  pyproject.toml  requirements.txt  setup.py  test_ensemble.py  test_evms.py  webpack.config.js
CRA/EVMS/config/: default.json  development.json  production.json  test.json
CRA/EVMS/data/: README.md
CRA/EVMS/k8s/: namespace.yaml
CRA/EVMS/scripts/: backup.sh  build.sh  deploy.sh  health-check.sh  init-database.js  migrate.js  restore.sh  seed.js  setup.sh  update-cve.js  validate-tools.js
CRA/EVMS/src/: index.js
CRA/EVMS/tests/: setup.js
CRA/EVMS/tools/: README.md
MCR/SecuritySidecar/: INTEGRATION.md  README.md  __init__.py  audit_consumer.py  config.py  investigator.py  models.py  patterns.yaml  policy.yaml  policy_engine.py  pyproject.toml  redactor.py  requirements.txt  scanner.py  sequence_analyzer.py  sidecar.py
MCR/SecuritySidecar/testing/: README.md  __init__.py  conftest.py  run_tests.sh  test_integration.py  test_policy_engine.py  test_redactor.py  test_results.txt  test_scanner.py  test_sequence_analyzer.py  test_standalone.py
ShaneGuard/: ACCURACY_IMPROVEMENT_ANALYSIS.md  Cargo.toml  README.md  RHLS_SYSTEM_SUMMARY.md  generate_extended_visualizations.py  generate_realistic_visualizations.py  generate_visualizations.py  test_results.csv
ShaneGuard/src/: config.rs  evidence.rs  featurizer.rs  main.rs  mesh_cognition.rs  policy.rs
ShaneGuard/src/actuators/: nginx_act.rs
ShaneGuard/src/memory_engine/: bdh_memory.rs  engine.rs  mod.rs  psi_index.rs
ShaneGuard/src/sensors/: mod.rs  simulated.rs
ShaneGuard/tests/: TEST_ARTIFACTS_SUMMARY.md
ShaneGuard/tests/reports/: COMPREHENSIVE_LEARNING_ANALYSIS_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  ENHANCED_LEARNING_ANALYSIS.md  EXTENDED_REALISTIC_LEARNING_REPORT.md  REALISTIC_DATASET_ANALYSIS.md
ShaneGuard/tests/results/: apache_vulnerability_results.csv  comprehensive_test_report.md  comprehensive_test_results.csv  enhanced_iteration_statistics.csv  iis_vulnerability_results.csv  iteration_statistics.csv  learning_progression.json  realistic_95_5_detailed_results.csv  test_results.md
ShaneGuard/tests/scenarios/: benign_traffic.json  deserialization_attacks.json  memory_corruption_attacks.json  webapp_attacks.json
ShaneGuard/tools/: falco_rules.yaml
WebGuard/: .gitignore  CRITICAL_ISSUES_ANALYSIS.md  Cargo.toml  EXPERIENTIAL_LEARNING_SUMMARY.md  ISOLATION_FOREST_INTEGRATION.md  KNOWLEDGE_EXPORT_GUIDE.md  KNOWLEDGE_EXPORT_SUMMARY.md  OVERFITTING_FIX_SUMMARY.md  README.md  RHLS_SYSTEM_SUMMARY.md  THREAT_DETECTION_ANALYSIS.md  WEBGUARD_FIXES_SUMMARY.md  WEBGUARD_KNOWLEDGE_SHARING.md  bhsm.md  generate_extended_visualizations.py  generate_realistic_visualizations.py  generate_visualizations.py  test_knowledge.json  webguard_comprehensive_test_report.md  webguard_test_metrics.csv  webguard_test_metrics.json
WebGuard/evaluation_results/: generate_png.py  generate_report.py  webguard_evaluation.json  webguard_evaluation_report.html
WebGuard/examples/: exported_knowledge.json  knowledge_export_demo.rs  knowledge_integration_demo.py  knowledge_transfer_utility.rs  knowledge_transfer_utility_old.rs  overfitting_fix_demo.rs  production_webguard_knowledge.json  threat_curricula.json  webguard_knowledge_sharing_demo.rs  webguard_knowledge_sharing_demo_old.rs  webguard_knowledge_summary.json  webguard_ml_training.json  webguard_modsecurity.conf  webguard_patterns.yar  webguard_siem_indicators.json  webguard_snort.rules
WebGuard/src/: adaptive_threshold.rs  advanced_feature_extractor.rs  config.rs  detection_logger.rs  embedding_learner.rs  enhanced_pattern_recognition.rs  eq_iq_regulator.rs  experiential_anomaly.rs  experiential_learning_test.rs  featurizer.rs  harvard_architecture.rs  lib.rs  log_parser.rs  main.rs  mesh_cognition.rs  persistence.rs  persistence_engine.rs  policy.rs  retrospective_learning.rs  runtime_config.rs  self_model.rs  semantic_normalizer.rs  simple_webguard.rs  threat_educator.rs  webguard_system.rs
WebGuard/src/actuators/: mod.rs
WebGuard/src/memory_engine/: bdh_memory.rs  engine.rs  mod.rs  psi_index.rs  valence.rs
WebGuard/src/modes/: audit.rs  mod.rs  proxy.rs  tail.rs
WebGuard/src/sensors/: simulated.rs
WebGuard/tests/: COMPREHENSIVE_TEST_RESULTS.md  EXPERIENTIAL_LEARNING_SUMMARY.md  README.md  TECHNICAL_SUMMARY.md  VALIDATION_REPORT.md  comprehensive_overfitting_validation.rs  comprehensive_tests_results.md  comprehensive_webguard_tests.rs  experiential_learning_comprehensive.rs  experiential_learning_demo.rs  experiential_learning_simple.rs  experiential_learning_test.rs  experiential_learning_test_fixed.rs  generate_validation_charts.py  generate_visualizations.py  run_tests.sh  test_balanced_learning.rs  test_enhanced_eq_iq_system.rs  test_eq_iq_integration.rs  test_eq_iq_integration_fixed.rs  test_overfitting_fix.rs  test_overfitting_fix_simple.rs  test_retrospective_learning.rs  threat_educator_integration.rs  validation_results.csv  validation_results.json  webguard_evaluation.rs
WebGuard/tests/data/: benign_samples.csv  benign_samples.json  comprehensive_test_data.csv  comprehensive_test_data.json  comprehensive_test_results.json  comprehensive_test_summary.csv  dataset_statistics.json  edge_case_data.csv  edge_case_data.json  fixed_comprehensive_test_results.json  (+10 more)
WebGuard/tools/: modsec_rules.conf  replay_wsus.py
(+509 files in other folders)
