[package]
name = "shaneguard"
version = "0.1.0"
edition = "2021"
description = "Adaptive Cybersecurity Web Service Protection Agent with Neuromorphic Defense and Reinforced Hebbian Learning"
authors = ["Shane D. Shook"]
license = "All Rights Reserved"
repository = "https://github.com/sdshook/Tools"
keywords = ["cybersecurity", "neuromorphic", "hebbian-learning", "reinforcement-learning", "endpoint-protection"]
categories = ["security", "machine-learning", "web-programming"]

[dependencies]
# Core dependencies for neuromorphic computing and reinforcement learning
# Will be populated once the actual implementation files are available

# Expected dependencies based on project description:
# - tokio (async runtime)
# - serde (serialization)
# - ndarray (numerical computing)
# - candle (ML framework)
# - tracing (logging)
# - clap (CLI)
# - reqwest (HTTP client)
# - sqlx (database)

[dev-dependencies]
# Testing and development dependencies

[[bin]]
name = "shaneguard"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true