[package]
name = "shaneguard"
version = "0.1.0"
edition = "2021"
description = "Adaptive Cybersecurity Web Service Protection Agent with Neuromorphic Defense and Reinforced Hebbian Learning"
authors = ["Shane D. Shook"]
license = "All Rights Reserved"
repository = "https://github.com/sdshook/Tools"
keywords = ["cybersecurity", "neuromorphic", "hebbian-learning", "reinforcement-learning", "endpoint-protection"]
categories = ["security", "machine-learning", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Random number generation
rand = "0.8"

[dev-dependencies]
# Testing and development dependencies

[[bin]]
name = "shaneguard"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true