[package]
name = "shaneguard"
version = "0.1.0"
edition = "2021"
description = "Adaptive Cybersecurity Web Service Protection Agent with Neuromorphic Defense and Reinforced Hebbian Learning"
authors = ["Shane D. Shook"]
license = "All Rights Reserved"
repository = "https://github.com/sdshook/Tools"
keywords = ["cybersecurity", "neuromorphic", "hebbian-learning", "reinforcement-learning", "endpoint-protection"]
categories = ["security", "machine-learning", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Random number generation
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.21"

[dev-dependencies]
# Testing and development dependencies

[[bin]]
name = "shaneguard"
path = "src/main.rs"

[[bin]]
name = "vulnerability_tests"
path = "src/bin/vulnerability_tests.rs"

[[bin]]
name = "debug_components"
path = "src/bin/debug_components.rs"

[[bin]]
name = "integration_tests"
path = "src/bin/integration_tests.rs"

[[bin]]
name = "enhanced_adaptive_learning_test"
path = "src/bin/enhanced_adaptive_learning_test.rs"

[[bin]]
name = "quick_memory_test"
path = "src/bin/quick_memory_test.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true