[package]
name = "webguard"
version = "0.1.0"
edition = "2021"
description = "Adaptive Cybersecurity Web Service Protection Agent with Neuromorphic Defense and Reinforced Hebbian Learning"
authors = ["Shane D. Shook"]
license = "All Rights Reserved"
repository = "https://github.com/sdshook/Tools"
keywords = ["cybersecurity", "neuromorphic", "hebbian-learning", "reinforcement-learning", "endpoint-protection"]
categories = ["security", "machine-learning", "web-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Random number generation
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.21"

# Advanced feature extraction
regex = "1.10"
urlencoding = "2.1"

[dev-dependencies]
# Testing and development dependencies
plotters = "0.3"
csv = "1.3"
chrono = "0.4"

# Additional dependencies for comprehensive testing

[[bin]]
name = "webguard"
path = "src/main.rs"

[[bin]]
name = "webguard_performance_suite"
path = "src/bin/webguard_performance_suite.rs"

[[bin]]
name = "webguard_diagnostic"
path = "src/bin/webguard_diagnostic.rs"

[[bin]]
name = "webguard_enhanced_diagnostic"
path = "src/bin/webguard_enhanced_diagnostic.rs"

[[bin]]
name = "debug_feature_extraction"
path = "src/bin/debug_feature_extraction.rs"

[[bin]]
name = "comprehensive_multipass_test"
path = "tests/scripts/comprehensive_multipass_test.rs"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true