[project]
name = "security-sidecar"
version = "0.1.0"
description = "MCR Security Sidecar - Enterprise AI Security Plane"
requires-python = ">=3.10"
dependencies = [
    "nats-py>=2.6.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
full = [
    "detect-secrets>=1.4.0",
    "presidio-analyzer>=2.2.0",
    "regex>=2023.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "langdetect>=1.0.9",
    "scikit-learn>=1.3.0",
    "tiktoken>=0.5.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "rich>=13.0.0",
    "python-json-logger>=2.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["testing"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["testing*"]
